// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: center;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="MuiTypography-root Typography-bodyInherit MuiTypography-body1"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-invert Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="MuiTypography-root Typography-bodyInherit MuiTypography-body1"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: center;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="MuiTypography-root Typography-bodyInherit MuiTypography-body1"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Component-flex UserBadge-root"
      style="align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-small"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-small Avatar-clippedCorner UserBadge-avatar"
        />
        <p
          class="MuiTypography-root Typography-invert Typography-bodyInherit MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        class="Component-flex Component-column"
        style="margin-left: 1em;"
      >
        <div
          class=""
        >
          <h4
            class="MuiTypography-root Typography-headingSmall MuiTypography-h4 MuiTypography-inline UserBadge-name"
          >
            Joe Doe
          </h4>
        </div>
        <p
          class="MuiTypography-root Typography-bodyInherit MuiTypography-body1"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;
